// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledLink component. Render StyledLink component with custom colors. 1`] = `
.c0 {
  border-bottom: 2px solid #333333;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0::before {
  background-color: #555555;
  bottom: -2px;
  content: '';
  height: 2px;
  left: 0;
  position: absolute;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.25s ease-in-out 0s;
  transition: all 0.25s ease-in-out 0s;
  visibility: hidden;
  width: 100%;
}

.c0:hover:before {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
  visibility: visible;
}

<a
  className="c0"
  hoverColor="#555555"
  href="/true"
  linkColor="#333333"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  My Styled Link
</a>
`;

exports[`StyledLink component. Render StyledLink component with default colors. 1`] = `
.c0 {
  border-bottom: 2px solid rgba(255,58,92,0.8);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0::before {
  background-color: rgba(148,117,204,0.8);
  bottom: -2px;
  content: '';
  height: 2px;
  left: 0;
  position: absolute;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.25s ease-in-out 0s;
  transition: all 0.25s ease-in-out 0s;
  visibility: hidden;
  width: 100%;
}

.c0:hover:before {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
  visibility: visible;
}

<a
  className="c0"
  href="/true"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  My Styled Link
</a>
`;

exports[`StyledLink component. StyledLink component w/out href renders as <span>. 1`] = `
.c0 {
  border-bottom: 2px solid rgba(255,58,92,0.8);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0::before {
  background-color: rgba(148,117,204,0.8);
  bottom: -2px;
  content: '';
  height: 2px;
  left: 0;
  position: absolute;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.25s ease-in-out 0s;
  transition: all 0.25s ease-in-out 0s;
  visibility: hidden;
  width: 100%;
}

.c0:hover:before {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
  visibility: visible;
}

<span
  className="c0"
>
  Styled Link as span
</span>
`;
